# first-IQA-TensorRT-ONNX

DAY19/: IQA_Modal.h  IQA_Model.cpp  day19_test.cpp
codeeveryday/: CMakeLists.txt  day10_backbone.py  day11_finetune.py  day12_checkpoint.py  day13_tensorboard.py  day14_scheduler.py  day15_vit.py  day16_export.py  day17_inference.cpp  day18_iamge.cpp  day1_oop.py  day20_video.c  day2_numpy.py  day3_tensor.py  day4_dataset.py  day5_train.py  day6_inference.py  day7_metrics.py  day8_pandas.py  day9_transformer.py  项目学习总结报告.md
trt_deploy/: CMakeLists.txt  README.md  TRT_Model.cpp  TRT_Model.h  gitignore.txt  main.cpp
